--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "wumpusing",
+  "name": "wumpusic",
   "main": "main.js",
   "author": "ZerioDev",
   "version": "6.0.0",
-  "repository": "https://github.com/ZerioDev/Music-bot.git",
-  "description": "A complete code to download for a cool Discord music bot.",
+  "repository": "https://github.com/Wumpus2000/wumpusic.git",
+  "description": "A complete code to download for a cool Discord.",
   "scripts": {
     "start": "node main.js"
   },
